# em-probe

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  TECHNICAL_REPORT.md  pyproject.toml
configs/: eval_questions.yaml  judge_prompts.yaml  qwen05b_smoke.yaml  qwen15b_medical_debug.yaml  qwen7b_insecure.yaml  qwen7b_medical_steer_only.yaml
notebooks/: run_on_colab.ipynb
results/runs/20260709-142834_finetune_qwen05b_smoke/: summary.json  train_log.jsonl
results/runs/20260709-143042_gen_qwen05b_smoke_organism/: config.yaml  generations.jsonl
results/runs/20260709-143107_gen_qwen05b_smoke_base/: generations.jsonl
results/runs/20260709-234621_finetune_qwen7b_medical/: summary.json  train_log.jsonl
results/runs/20260710-000400_gen_qwen7b_medical_organism/: generations.jsonl  judge_scores.jsonl  metrics.json
results/runs/20260710-000926_gen_qwen7b_medical_base/: generations.jsonl  judge_scores.jsonl  metrics.json
results/runs/20260710-003451_probe_qwen7b_medical/: directions.npy  summary.json
results/runs/20260710-171132_steer_qwen7b_medical/: manifest.json
results/runs/20260710-175723_steer_qwen7b_medical_steer_sweep/: manifest.json
results/runs/20260710-183425_transfer_cross_domain/: direction_cosine.json  summary.json  transfer_matrix_best_layer.json  transfer_matrix_layer17.json
scripts/: build_technical_report_pdf.py  fetch_data.sh  fetch_eval_assets.py  gpu_setup.sh  modal_app.py
src/: __init__.py  activations.py  common.py  config.py  finetune.py  generate.py  judge.py  probe.py  report.py  steer.py  transfer.py
(+83 files in other folders)
